--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,8 @@
         "php": "^7.3|^8.0",
         "acme/analytics": "*",
         "benjaminhirsch/nova-slug-field": "^1.2",
+        "chris-ware/nova-clock-card": "^1.2",
+        "codebykyle/calculated-field": "^1.1",
         "dniccum/phone-number": "^1.1",
         "fideloper/proxy": "^4.4",
         "fruitcake/laravel-cors": "^2.0",
