--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
         "prod": "npm run production",
         "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --config=node_modules/laravel-mix/setup/webpack.config.js",
         "build-analytics": "cd nova-components/Analytics && npm run dev",
-        "build-analytics-prod": "cd nova-components/Analytics && npm run prod"
+        "build-analytics-prod": "cd nova-components/Analytics && npm run prod",
+        "build-welcomemsg": "cd nova-components/Welcomemsg && npm run dev",
+        "build-welcomemsg-prod": "cd nova-components/Welcomemsg && npm run prod"
     },
     "devDependencies": {
         "axios": "^0.19",
