--- a/composer.json
+++ b/composer.json
@@ -14,13 +14,15 @@
         "chris-ware/nova-clock-card": "^1.2",
         "codebykyle/calculated-field": "^1.1",
         "dniccum/phone-number": "^1.1",
+        "example/miami-ice": "*",
         "fideloper/proxy": "^4.4",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
         "laravel/framework": "^8.12",
         "laravel/nova": "*",
         "laravel/tinker": "^2.5",
-        "example/miami-ice": "*",
+        "livewire/livewire": "^2.3",
+        "whitecube/nova-page": "^0.2.5",
         "wlmsg/welcomemsg": "*"
     },
     "require-dev": {
