--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,7 @@
         "laravel/framework": "^8.12",
         "laravel/nova": "*",
         "laravel/tinker": "^2.5",
+        "livewire/livewire": "^2.3",
         "whitecube/nova-page": "^0.2.5",
         "wlmsg/welcomemsg": "*"
     },
