--- a/composer.json
+++ b/composer.json
@@ -24,11 +24,11 @@
         "laravel/nova": "*",
         "laravel/tinker": "^2.5",
         "livewire/livewire": "^2.3",
+        "stripe/stripe-php": "^7.67",
         "whitecube/nova-page": "^0.2.5",
         "wlmsg/welcomemsg": "*"
     },
     "require-dev": {
-        "barryvdh/laravel-debugbar": "^3.5",
         "facade/ignition": "^2.5",
         "fakerphp/faker": "^1.9.1",
         "laravel/sail": "^0.0.5",
